adding ability for decimal

--- a/calculator.html
+++ b/calculator.html
@@ -73,6 +73,7 @@
         </tr>
         <tr>
           <td><button type="button" name="button" class="number">0</button></td>
+          <td><button type="button" name="button" class="decimal">.</button></td>
           <td><button type="button" name="button" class="evaluate">=</button></td>
           <td><button type="button" name="button" class="operator">/</button></td>
           <td>&nbsp;</td>
