--- a/calculator2.html
+++ b/calculator2.html
@@ -39,8 +39,8 @@
         text-align: right;
         background: #DCE1E9;
       }
-      #container {
-        background: #EAF2E3;
+      .container {
+        background: #black;
         width: 415px;
         height: 420px;
       }
