bootstrap layout for calculator

--- a/calculator2.html
+++ b/calculator2.html
@@ -61,7 +61,7 @@
         <div class="col col-xs-3"><button type="button" name="button" class="number">7</button></div>
         <div class="col col-xs-3"><button type="button" name="button" class="number">8</button></div>
         <div class="col col-xs-3"><button type="button" name="button" class="number">9</button></div>
-        <div class="col col-xs-3"></div>
+        <div class="col col-xs-3"><button type="button" name="button" class="operator">X</button></div>
       </div>
       <div class="row">
         <div class="col col-xs-3"><button type="button" name="button" class="number">4</button></div>
@@ -77,9 +77,9 @@
       </div>
       <div class="row">
         <div class="col col-xs-3"><button type="button" name="button" class="number">0</button></div>
+        <div class="col col-xs-3"><button type="button" name="button" class="decimal">.</button></div>
         <div class="col col-xs-3"><button type="button" name="button" class="evaluate">=</button></div>
         <div class="col col-xs-3"><button type="button" name="button" class="operator">/</button></div>
-        <div class="col col-xs-3"></div>
       </div>
     </div>
 
