--- a/calculator2.html
+++ b/calculator2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -16,8 +17,6 @@
         background: #999;
       }
       button {
-        width: 100px;
-        height: 80px;
         font-size: 4em;
         background: rgba(70, 172, 194, 0.9);
         color: white;
@@ -33,55 +32,99 @@
         outline: none;
       }
       #display {
-        height: 80px;
-        width: 308px;
         font-size: 4em;
         text-align: right;
         background: #DCE1E9;
       }
       .container {
-        background: #black;
+        /*background: #black;
         width: 415px;
-        height: 420px;
+        height: 420px;*/
+        max-width: 415px;
+      }
+      .col {
+        padding: 0;
       }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col col-xs-3">
-          <button type="button" name="button" class="clear">C</button>
+        <div class="col col-xs-12">
+          <div class="input-group">
+            <span class="input-group-btn">
+              <button class="btn btn-default clear" type="button">C</button>
+            </span>
+            <input type="text" class="form-control" id="display">
+          </div><!-- /input-group -->
+        </div><!-- /.col -->
+      </div>
+      <div class="row">
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">7</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">8</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">9</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default operator">X</button>
+          </div>
         </div>
-        <div class="col col-xs-9">
-          <input type="text" id="display">
+      </div> <!-- end row -->
+      <div class="row">
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">4</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">5</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">6</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default operator">-</button>
+          </div>
         </div>
-      </div>
+      </div> <!-- end row -->
       <div class="row">
-        <div class="col col-xs-3"><button type="button" name="button" class="number">7</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">8</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">9</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="operator">X</button></div>
-      </div>
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">1</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">2</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">3</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default operator">+</button>
+          </div>
+        </div>
+      </div> <!-- end row -->
       <div class="row">
-        <div class="col col-xs-3"><button type="button" name="button" class="number">4</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">5</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">6</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="operator">-</button></div>
-      </div>
-      <div class="row">
-        <div class="col col-xs-3"><button type="button" name="button" class="number">1</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">2</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="number">3</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="operator">+</button></div>
-      </div>
-      <div class="row">
-        <div class="col col-xs-3"><button type="button" name="button" class="number">0</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="decimal">.</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="evaluate">=</button></div>
-        <div class="col col-xs-3"><button type="button" name="button" class="operator">/</button></div>
-      </div>
-    </div>
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default number">0</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default decimal">.</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default evaluate">=</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default operator">/</button>
+          </div>
+        </div>
+      </div> <!-- end row -->
+
+    </div> <!-- end container -->
 
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="calculator.js"></script>
