--- a/calculator2.html
+++ b/calculator2.html
@@ -40,10 +40,23 @@
         /*background: #black;
         width: 415px;
         height: 420px;*/
-        max-width: 415px;
+        max-width: 700px;
       }
       .col {
         padding: 0;
+      }
+      .btn-group-justified>.btn-group .btn {
+        height: 100px;
+        font-size: 4em;
+      }
+      .form-control, .btn-default {
+        height: 100px;
+      }
+
+      @media (max-width: 600px) {
+        button {
+          width: 80px;
+        }
       }
     </style>
   </head>
