--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         width:100%;
         font-size: 4em;
       }
+      .operator {
+        background: linear-gradient(to bottom, #39b4a6, #18A999);
+      }
+      .evaluate {
+        background: linear-gradient(to bottom, #E7BB41, #cba439);
+      }
     </style>
   </head>
   <body>
