--- a/index.html
+++ b/index.html
@@ -9,65 +9,7 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    <style media="screen">
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        background: #999;
-      }
-      button {
-        font-size: 4em;
-        background: rgba(70, 172, 194, 0.9);
-        color: white;
-        border-radius: 10px;
-      }
-      button:hover {
-        color: black;
-      }
-      button:active {
-        border: 2px solid white;
-      }
-      button:focus {
-        outline: none;
-      }
-      #display {
-        font-size: 4em;
-        text-align: right;
-        background: #DCE1E9;
-      }
-      .container {
-        /*background: #black;
-        width: 415px;
-        height: 420px;*/
-        max-width: 700px;
-      }
-      .col {
-        padding: 0;
-      }
-      .btn-group-justified>.btn-group .btn {
-        height: 100px;
-        font-size: 4em;
-      }
-      .form-control, .btn-default {
-        height: 100px;
-      }
-      @media (max-width: 600px) {
-        button {
-          width: 80px;
-        }
-      }
-      .clear {
-        width:100%;
-        font-size: 4em;
-      }
-      .operator {
-        background: linear-gradient(to bottom, #39b4a6, #18A999);
-      }
-      .evaluate {
-        background: linear-gradient(to bottom, #E7BB41, #cba439);
-      }
-    </style>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div class="container">
